--- a/_posts/0000-01-02-jrumpe.md
+++ b/_posts/0000-01-02-jrumpe.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"Develop persistence in order to succeed."
 Use the left arrow to go back!
